# crdbl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.html
.github/workflows/: deploy-demo.yml
assets/: crdbl-CVATCTDL.wasm  index-BSFEB3jb.css  index-CDtJ0hmF.js  index-CRdmlFEF.js  index-fcZtewd9.js
benchmark/: benchmark.js  package.json  random.js
benchmark/json/: generateRandomData.js  index.js
benchmark/string/: index.js
bindings/web/: CMakeLists.txt  ConcurrentQueue.h  GetWorker.js  JsObjectSerializer.cpp  JsObjectSerializer.h  OperationBuilderWrapper.h  OperationFilterWrapper.cpp  OperationFilterWrapper.h  OperationHandle.cpp  OperationHandle.h  ProjectDB.cpp  ProjectDB.h  ReaderWriterLock.h  StringIds.h  TagExtensions.cpp  TagExtensions.h  TransformOperationStreamWrapper.h  TypeLogGeneratorWrapper.h  VectorTimestampExtensions.cpp  VectorTimestampExtensions.h  Worker.cpp  Worker.h  Worker.js  Wrappers.h  crdbl.d.ts  fixbuild.sh  init.cpp  package.json
demo/: .eslintrc.cjs  index.html  package.json  vite.config.ts
demo/src/: App.css  App.tsx
demo/src/components/: TextEditor.tsx
demo/src/pages/: Snapshots.module.css  Snapshots.tsx  Sync.module.css  Sync.tsx  Tags.tsx
demo/src/utility/: EventEmitter.ts
examples/: package.json
examples/filters/: index.js
examples/hello_world/: index.js
examples/json/: example_data.js  index.js  json.js
examples/merge/: index.js
examples/serialization/: index.js
examples/types/: index.js
examples/undo/: index.js
src/: Attribute.cpp  Attribute.h  BlockValue.cpp  BlockValue.h  BlockValueCacheItem.h  CMakeLists.txt  Core.cpp  Core.h  CoreInit.h  Edge.h  EdgeId.h  EdgeType.h  Effect.cpp  Effect.h  Event.cpp  Event.h  IObjectSerializer.h  InheritanceContext.cpp  InheritanceContext.h  Json.cpp  Json.h  JsonSerializer.cpp  JsonSerializer.h  LogOperation.cpp  LogOperation.h  NodeId.cpp  NodeId.h  NodeType.cpp  NodeType.h  Operation.cpp  Operation.h  OperationBuilder.cpp  OperationBuilder.h  OperationFilter.cpp  OperationFilter.h  OperationIterator.cpp  OperationIterator.h  OperationLog.cpp  OperationLog.h  OperationType.h  (+18 more)
src/Nodes/: BlockValueNode.cpp  BlockValueNode.h  ContainerNode.cpp  ContainerNode.h  ListNode.cpp  ListNode.h  MapNode.cpp  MapNode.h  Node.cpp  Node.h  OrderedFloat64MapNode.cpp  OrderedFloat64MapNode.h  ReferenceNode.cpp  ReferenceNode.h  SetNode.cpp  SetNode.h  ValueNode.cpp  ValueNode.h
src/Serialization/: ILogOperationDeserializer.h  ILogOperationSerializer.h  LogOperationSerialization.cpp  LogOperationSerialization.h
src/Serialization/standard_v1/: Deserialize.cpp  Deserialize.h  Format.h  LogOperation.cpp  LogOperation.h  LogOperationDeserializer.cpp  LogOperationDeserializer.h  LogOperationSerialization.cpp  LogOperationSerialization.h  LogOperationSerializer.cpp  LogOperationSerializer.h  Serialize.cpp  Serialize.h
src/Streams/: CallbackWritableStream.cpp  CallbackWritableStream.h  FilterOperationStream.cpp  FilterOperationStream.h  IReadableStream.h  IWritableStream.h  QoSFilterOperationStream.h  ReadableStreamBase.cpp  ReadableStreamBase.h  RedoFilterOperationStream.cpp  RedoFilterOperationStream.h  TeeStream.cpp  TeeStream.h  TransformOperationStream.cpp  TransformOperationStream.h  UndoFilterOperationStream.cpp  UndoFilterOperationStream.h  WriteFilterOperationStream.cpp  WriteFilterOperationStream.h
test/: AttributeTests.cpp  BlockValueTests.cpp  CMakeLists.txt  CoreTests.cpp  ListNodeTests.cpp  MapNodeTests.cpp  NodeTests.cpp  OperationFilterTests.cpp  PromiseTests.cpp  ReferenceNodeTests.cpp  ReverseStream.h  SerializationTests.cpp  SetNodeTests.cpp  TimestampTests.cpp  TypeLogGeneratorTests.cpp  ValueTests.cpp  VectorTimestampTests.cpp  helpers.cpp  helpers.h
